--- a/package.json
+++ b/package.json
@@ -12,19 +12,27 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "autoprefixer": "^6.3.3",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.6",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "~1.3.5",
     "crypto": "0.0.3",
+    "css-loader": "^0.23.1",
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "ejs-locals": "^1.0.2",
     "errorhandler": "^1.4.3",
+    "exports-loader": "^0.6.3",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
     "jquery-ui": "^1.10.5",
     "less": "^2.6.0",
@@ -32,19 +40,13 @@
     "morgan": "~1.6.1",
     "nconf": "^0.8.2",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
+    "react-day-picker": "^1.3.1",
     "react-dom": "^0.14.7",
     "serve-favicon": "~2.3.0",
     "serve-static": "^1.10.0",
-    "underscore": "^1.8.3",
-    "autoprefixer": "^6.3.3",
-    "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.8.5",
-    "imports-loader": "^0.6.5",
     "style-loader": "^0.13.0",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13"
   }
